fixed employee credentials broken layout after schedule editinf

--- a/src/app/modules/schedule/components/edit-schedule/edit-schedule.component.scss
+++ b/src/app/modules/schedule/components/edit-schedule/edit-schedule.component.scss
@@ -407,7 +407,7 @@
   grid-area: skill;
 }
 
-::ng-deep {
+:host ::ng-deep {
   label {
     margin-bottom: 0 !important;
   }
